styles.css
.blocklySvg {
    background-color: #f9f9f9 !important;
}

/* Makes our label white. */
.blocklyTreeLabel {
    color: white;
}
/* Adds padding around the group of categories and separators. */
.blocklyToolboxContents {
    padding: 0.5em;
}
/* Adds space between the categories, rounds the corners and adds space around the label. */
.blocklyTreeRow {
    padding: 3px;
    margin-bottom: 0.5em;
    border-radius: 4px;
}

/* Changes color of the icon to white. */
.customIcon {
    color: white;
}
/* Stacks the icon on top of the label. */
.blocklyTreeRowContentContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
}
.blocklyTreeRow {
    height: initial;
}

.blocklyDiv {
    position: absolute;
}

#nextblocks-container {
    height: 70vh;
}

.h-10 {
    height: 10%;
}

.h-15 {
    height: 15%;
}

.border {
    border: 1px solid #000;
}


.chat {
    box-sizing: border-box;
}
.container {
    display: flex;
    justify-content: center;
    align-items: center;
}
.chat-container {
    position: relative;
}

.messages {
    height: 300px;
    width: 500px;
    border: 2px solid #ccc;
    border-radius: 3px;
    padding: 1em;
    overflow: scroll;
}

.msg {
    margin-bottom: 5px;
}
.msg-text {
    padding: 5px;
    display: inline-block;
    border-radius: 5px;
}
.msg-normal .msg-text {
    background: rgb(39, 112, 215);
    color: white;
}

.msg-notification .msg-text,
.msg-join .msg-text,
.msg-left .msg-text {
    background: #eee;
    border: 1px solid #ccc;
}

.msg-notification .msg-sender,
.msg-join .msg-sender,
.msg-left .msg-sender {
    display: none;
}

#showCodeButton {
    margin: 0 !important;
}

.code-div {
    background-color: #f9f9f9;
    height: 100%;
    border: 1px solid #eee;
    padding: 10px;
    font-family: "Lucida Console", "Courier New", monospace;
}

#output-div {
    background-color: black !important;
    color: white !important;
    font-family: "Courier New", monospace !important;
    border: none !important;
}

#output-div * {
    color: white !important;
}

